--- a/ansible/install_infra/roles/nginx/tasks/main.yml
+++ b/ansible/install_infra/roles/nginx/tasks/main.yml
@@ -62,6 +62,7 @@
   with_items:
     - security
     - logs
+    - default_settings
   notify: Restart NGinx
 
 - name: Configure NGinx custom proxy params
