Update web-homer link to github

--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -16,7 +16,7 @@ homer_config_message:
 homer_config_links:
   - name: "GitHub"
     icon: "fab fa-github"
-    url: "https://github.com/x/y" # TODO add the future github link
+    url: "https://github.com/Neraud/home-server"
     target: "_blank"
 
 homer_images_to_download:
