Fix wireguard install Install proper linux headers

--- a/ansible/install_infra/roles/wireguard/tasks/main.yml
+++ b/ansible/install_infra/roles/wireguard/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: Install Linux kernel headers
   apt:
-    name: linux-headers-amd64
+    name: "linux-headers-{{ ansible_kernel }}"
 
 - name: Install Wireguard
   apt:
