--- a/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
+++ b/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
@@ -4,6 +4,7 @@ kubernetes_ingress_http_port: 30080
 kubernetes_ingress_https_port: 30443
 kubernetes_ingress_lemonLdap_handler_port: 30081
 kubernetes_ingress_mqtt_port: 31883
+kubernetes_pihole_port: 30053
 
 kubernetes_local_lvm_storage_class_name: local-lvm
 kubernetes_glusterfs_storage_class_name: glusterfs
