--- a/ansible/inventories/vagrant/group_vars/all/storage.yml
+++ b/ansible/inventories/vagrant/group_vars/all/storage.yml
@@ -41,6 +41,16 @@ glusterfs_volumes:
     labels:
       app.kubernetes.io/name: zonemta
       app.kubernetes.io/component: redis
+  pihole-data:
+    replicas: 2
+    capacity: 32M
+    arbiterCapacity: 16M
+    nodes: [master-2, master-3]
+    arbiters: [master-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: pihole
+      app.kubernetes.io/component: pihole
   unifi-data:
     replicas: 2
     capacity: 1G
