Inject static hosts in both dnsmasq and infra-pihole

--- a/ansible/inventories/vagrant/group_vars/dns_servers/dnsmasq.yml
+++ b/ansible/inventories/vagrant/group_vars/dns_servers/dnsmasq.yml
@@ -2,15 +2,7 @@
 
 dns_local_domain: k8stest.com
 
-dns_local_hosts:
-  - name: master-1
-    ip: 192.168.100.11
-  - name: master-2
-    ip: 192.168.100.12
-  - name: master-3
-    ip: 192.168.100.13
-  - name: node-home
-    ip: 192.168.100.14
+dns_local_hosts: "{{ dns_static_hosts }}"
 
 dnsmasq_upstreams:
   # use Cloudflare DNS while running in VirtualBox
