--- a/ansible/inventories/vagrant/group_vars/kubernetes_masters/kubernetes_masters.yml
+++ b/ansible/inventories/vagrant/group_vars/kubernetes_masters/kubernetes_masters.yml
@@ -1,5 +1,5 @@
 ---
 
-haproxy_kubernetes_keepalived_instance_interface: eth1
+haproxy_kubernetes_keepalived_instance_interface: "{{ default_network_interface }}"
 haproxy_kubernetes_keepalived_instance_auth_pass: Passw0rd
 haproxy_kubernetes_keepalived_instance_virtual_ip: 192.168.100.102
