--- a/ansible/inventories/vagrant/group_vars/wireguard_servers/wireguard_servers.yml
+++ b/ansible/inventories/vagrant/group_vars/wireguard_servers/wireguard_servers.yml
@@ -1,6 +1,6 @@
 ---
 
-wireguard_keepalived_instance_interface: eth1
+wireguard_keepalived_instance_interface: "{{ default_network_interface }}"
 wireguard_keepalived_instance_auth_pass: Passw0rd
 wireguard_keepalived_instance_virtual_ip: 192.168.100.103
 
