Expose private domains on the internal vip

--- a/ansible/inventories/vagrant/group_vars/all/dns-servers.yml
+++ b/ansible/inventories/vagrant/group_vars/all/dns-servers.yml
@@ -24,8 +24,8 @@ dns_static_hosts:
   - name: "home.{{ web_base_domain }}"
     ip: "{{ nginx_keepalived_instance_public_virtual_ip }}"
   - name: "stream.{{ web_base_domain }}"
-    ip: "{{ nginx_keepalived_instance_public_virtual_ip }}"
+    ip: "{{ nginx_keepalived_instance_internal_virtual_ip }}"
   - name: "dev.{{ web_base_domain }}"
-    ip: "{{ nginx_keepalived_instance_public_virtual_ip }}"
-  - name: "download.{{ web_base_domain }}"
-    ip: "{{ nginx_keepalived_instance_public_virtual_ip }}"
+    ip: "{{ nginx_keepalived_instance_internal_virtual_ip }}"
+  - name: "dl.{{ web_base_domain }}"
+    ip: "{{ nginx_keepalived_instance_internal_virtual_ip }}"
