--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
@@ -6,7 +6,7 @@
         }}) is restarting {{ printf "%.2f" $value }} times / 5 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepodcrashlooping
     expr: |
-      rate(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[15m]) * 60 * 5 > 0
+      rate(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[5m]) * 60 * 5 > 0
     for: 15m
     labels:
       severity: warning
@@ -16,7 +16,13 @@
         state for longer than 15 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepodnotready
     expr: |
-      sum by (namespace, pod) (max by(namespace, pod) (kube_pod_status_phase{job="kube-state-metrics", phase=~"Pending|Unknown"}) * on(namespace, pod) group_left(owner_kind) max by(namespace, pod, owner_kind) (kube_pod_owner{owner_kind!="Job"})) > 0
+      sum by (namespace, pod) (
+        max by(namespace, pod) (
+          kube_pod_status_phase{job="kube-state-metrics", phase=~"Pending|Unknown"}
+        ) * on(namespace, pod) group_left(owner_kind) topk by(namespace, pod) (
+          1, max by(namespace, pod, owner_kind) (kube_pod_owner{owner_kind!="Job"})
+        )
+      ) > 0
     for: 15m
     labels:
       severity: warning
