--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -88,6 +88,10 @@
   tags: kubernetes-app-monitoring-nginx-log-exporter
   when: nginx_log_exporter_enabled | bool
 
+- import_playbook: app-monitoring-pihole-exporter.yml
+  tags: kubernetes-app-monitoring-pihole-exporter
+  when: pihole_exporter_enabled | bool
+
 - import_playbook: app-monitoring-gluster-exporter.yml
   tags: kubernetes-app-monitoring-gluster-exporter
   when: gluster_exporter_enabled | bool
