Add monitoring-alertmanager storage Fix silences lost on pod restart

--- a/ansible/inventories/vagrant/group_vars/all/storage.yml
+++ b/ansible/inventories/vagrant/group_vars/all/storage.yml
@@ -116,6 +116,17 @@ glusterfs_volumes:
       app.kubernetes.io/name: prometheus
       app.kubernetes.io/component: prometheus
       app.kubernetes.io/instance: k8s
+  alertmanager-k8s:
+    replicas: 2
+    capacity: 16M
+    arbiterCapacity: 16M
+    nodes: [master-2, master-3]
+    arbiters: [master-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: alertmanager
+      app.kubernetes.io/component: alertmanager
+      app.kubernetes.io/instance: k8s
   grafana-data:
     replicas: 2
     capacity: 128M
