--- a/ansible/inventories/vagrant/group_vars/controller/kubernetes-infra.yml
+++ b/ansible/inventories/vagrant/group_vars/controller/kubernetes-infra.yml
@@ -6,12 +6,12 @@ kubernetes_nginx_ingress_mqtt_port: "{{ kubernetes_ingress_mqtt_port }}"
 kubernetes_nginx_ingress_mqtt_target: "home-mosquitto/mosquitto:1883"
 
 kubernetes_nfs_storage:
-  nfs-multimetia:
+  nfs-multimedia:
     nfs_server: "{{ hostvars['master-1'].ansible_host }}"
     nfs_path: /opt/mock_nas/Multimedia
     reclaim_policy: Retain
     labels:
-      detail: multimetia
+      detail: multimedia
   nfs-download:
     nfs_server: "{{ hostvars['master-1'].ansible_host }}"
     nfs_path: /opt/mock_nas/Download
