--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -4,6 +4,10 @@
   tags: kubernetes-app-infra-docker-registry
   when: docker_registry_enabled | bool
 
+- import_playbook: app-infra-intel-gpu-plugin.yml
+  tags: kubernetes-app-infra-intel-gpu-plugin
+  when: intel_gpu_plugin_enabled | bool
+
 - import_playbook: app-infra-kubernetes-metrics-server.yml
   tags: kubernetes-app-infra-kubernetes-metrics-server
   when: kubernetes_metrics_server_enabled | bool
