--- a/ansible/inventories/vagrant/host_vars/master-3/kubernetes-postinstall.yml
+++ b/ansible/inventories/vagrant/host_vars/master-3/kubernetes-postinstall.yml
@@ -9,6 +9,8 @@ kubernetes_node_labels:
     value: 'no'
   - name: capability/loadbalancer
     value: 'yes'
+  - name: capability/gpu
+    value: "no"
 
 kubernetes_node_taints:
   - key: node-role.kubernetes.io/master
