--- a/ansible/install_infra/roles/firewall/defaults/main.yml
+++ b/ansible/install_infra/roles/firewall/defaults/main.yml
@@ -6,3 +6,6 @@
 #    description: Great Application!
 #    ports: 1234,5678/tcp
 #    rule: allow
+#    allow_invalid_packets:
+#      - proto: tcp
+#        ports: 5678
