--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
@@ -85,10 +85,11 @@
 
 - name: Prepare wanted index settings
   set_fact:
-    wanted_index_settings:
+    default_wanted_index_settings:
       # By default, an index is created with 1 replica.
       # If we only have 1 node, this index will remain yellow
       number_of_replicas: "{{ (elasticsearch.replicas|int > 1) | ternary(1, 0) }}"
+    logstash_wanted_index_settings:
       # After 30 seconds without search, an index is flagged idle and not refresh automatically
       # Our prometheus exporter won't see new documents and trigger a ElasticNoNewDocuments alert when this happens
       # To avoid that, we force the scheduled refresh
@@ -116,7 +117,7 @@
     body:
         index_patterns: [ "*" ]
         order: -1
-        settings: "{{ wanted_index_settings }}"
+        settings: "{{ default_wanted_index_settings }}"
     body_format: json
     validate_certs: no
     force_basic_auth: yes
@@ -125,11 +126,44 @@
   register: set_default_index_template
   changed_when: True
   failed_when: "not set_default_index_template.json.acknowledged | default (false)"
-  when: not current_default_index_template.json or (current_default_index_template.json.default.settings.index != wanted_index_settings)
+  when: not current_default_index_template.json or (current_default_index_template.json.default.settings.index != default_wanted_index_settings)
 
-- name: List existing ElasticSearch logstash indices
+- name: Get current logstash ElasticSearch index template
   uri:
-    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/logstash*"
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_template/logstash"
+    method: GET
+    headers:
+      Host: "infra.{{ web_base_domain }}"
+    validate_certs: no
+    status_code: [ 200, 404 ]
+    force_basic_auth: yes
+    user: "{{ elasticsearch.admin_user.user }}"
+    password: "{{ elasticsearch.admin_user.password }}"
+  register: current_logstash_index_template
+
+- name: Configure logstash ElasticSearch index template
+  uri:
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_template/logstash"
+    method: POST
+    headers:
+      Host: "infra.{{ web_base_domain }}"
+    body:
+        index_patterns: [ "logstash-*" ]
+        order: 10
+        settings: "{{ logstash_wanted_index_settings }}"
+    body_format: json
+    validate_certs: no
+    force_basic_auth: yes
+    user: "{{ elasticsearch.admin_user.user }}"
+    password: "{{ elasticsearch.admin_user.password }}"
+  register: set_logstash_index_template
+  changed_when: True
+  failed_when: "not set_logstash_index_template.json.acknowledged | default(false)"
+  when: not current_logstash_index_template.json or (current_logstash_index_template.json.logstash.settings.index != logstash_wanted_index_settings)
+
+- name: List existing ElasticSearch indices
+  uri:
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/*"
     method: GET
     headers:
       Host: "infra.{{ web_base_domain }}"
@@ -140,14 +174,14 @@
     password: "{{ elasticsearch.admin_user.password }}"
   register: elasticsearch_existing_indices
 
-- name: Update existing ElasticSearch logstash indices
+- name: Update existing ElasticSearch default indices
   uri:
     url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/{{ item.key }}/_settings"
     method: PUT
     headers:
       Host: "infra.{{ web_base_domain }}"
     body:
-      index: "{{ wanted_index_settings }}"
+      index: "{{ default_wanted_index_settings }}"
     body_format: json
     validate_certs: no
     force_basic_auth: yes
@@ -159,4 +193,29 @@
   loop: "{{ elasticsearch_existing_indices.json | dict2items }}"
   loop_control:
     label: "{{ item.key }}"
-  when: wanted_index_settings | dict2items | difference(item.value.settings.index | dict2items)
+  when: 
+   - not item.key is match("logstash.*")
+   - default_wanted_index_settings | dict2items | difference(item.value.settings.index | dict2items)
+
+- name: Update existing ElasticSearch logstash indices
+  uri:
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/{{ item.key }}/_settings"
+    method: PUT
+    headers:
+      Host: "infra.{{ web_base_domain }}"
+    body:
+      index: "{{ default_wanted_index_settings | combine(logstash_wanted_index_settings) }}"
+    body_format: json
+    validate_certs: no
+    force_basic_auth: yes
+    user: "{{ elasticsearch.admin_user.user }}"
+    password: "{{ elasticsearch.admin_user.password }}"
+  register: set_index_settings
+  changed_when: True
+  failed_when: "not set_index_settings.json.acknowledged | default (false)"
+  loop: "{{ elasticsearch_existing_indices.json | dict2items }}"
+  loop_control:
+    label: "{{ item.key }}"
+  when: 
+   - item.key is match("logstash.*")
+   - default_wanted_index_settings | combine(logstash_wanted_index_settings) | dict2items | difference(item.value.settings.index | dict2items)
